// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress Component should handle edge cases 1`] = `
<div>
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-110%);"
    />
  </div>
   
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(--50%);"
    />
  </div>
   
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-100%);"
    />
  </div>
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-100%);"
    />
  </div>
</div>
`;

exports[`Progress Component should render in different states 1`] = `
<div>
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20 opacity-50"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-100%);"
    />
  </div>
   
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20 opacity-100"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-0%);"
    />
  </div>
   
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20 animate-pulse"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-50%);"
    />
  </div>
   
</div>
`;

exports[`Progress Component should render with aria attributes 1`] = `
<div>
  <div
    aria-label="Download progress"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="75"
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-25%);"
    />
  </div>
</div>
`;

exports[`Progress Component should render with custom animations 1`] = `
<div>
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20 transition-all duration-500 ease-in-out"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-50%);"
    />
  </div>
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20 animate-[progress_1s_ease-in-out_infinite]"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-50%);"
    />
  </div>
</div>
`;

exports[`Progress Component should render with custom className 1`] = `
<div>
  <div
    class="relative w-full overflow-hidden rounded-full bg-primary/20 custom-progress h-4"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-50%);"
    />
  </div>
</div>
`;

exports[`Progress Component should render with custom colors 1`] = `
<div>
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-red-200 [&>div]:bg-red-500"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-50%);"
    />
  </div>
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-green-200 [&>div]:bg-green-500"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-50%);"
    />
  </div>
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-blue-200 [&>div]:bg-blue-500"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-50%);"
    />
  </div>
</div>
`;

exports[`Progress Component should render with data attributes 1`] = `
<div>
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-state="loading"
    data-testid="custom-progress"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-50%);"
    />
  </div>
</div>
`;

exports[`Progress Component should render with decorative elements 1`] = `
<div>
  <div
    class="space-y-2"
  >
    <div
      class="flex justify-between text-sm"
    >
      <span>
        Progress
      </span>
      <span>
        50%
      </span>
    </div>
    <div
      class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
      data-testid="progress-root"
    >
      <div
        class="h-full w-full flex-1 bg-primary transition-all"
        data-testid="progress-indicator"
        style="transform: translateX(-50%);"
      />
    </div>
    <div
      class="text-xs text-muted-foreground"
    >
      Processing...
    </div>
  </div>
</div>
`;

exports[`Progress Component should render with default state (no value) 1`] = `
<div>
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-100%);"
    />
  </div>
</div>
`;

exports[`Progress Component should render with different progress values 1`] = `
<div>
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-100%);"
    />
  </div>
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-75%);"
    />
  </div>
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-50%);"
    />
  </div>
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-25%);"
    />
  </div>
  <div
    class="relative h-2 w-full overflow-hidden rounded-full bg-primary/20"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-0%);"
    />
  </div>
</div>
`;

exports[`Progress Component should render with different sizes 1`] = `
<div>
  <div
    class="relative w-full overflow-hidden rounded-full bg-primary/20 h-1"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-50%);"
    />
  </div>
  <div
    class="relative w-full overflow-hidden rounded-full bg-primary/20 h-2"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-50%);"
    />
  </div>
  <div
    class="relative w-full overflow-hidden rounded-full bg-primary/20 h-3"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-50%);"
    />
  </div>
  <div
    class="relative w-full overflow-hidden rounded-full bg-primary/20 h-4"
    data-testid="progress-root"
  >
    <div
      class="h-full w-full flex-1 bg-primary transition-all"
      data-testid="progress-indicator"
      style="transform: translateX(-50%);"
    />
  </div>
</div>
`;
